--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Tutorial webdriver io",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "wdio": "wdio run ./src/conf/wdio.conf.js"
+    "test": "wdio run ./src/conf/wdio.conf.js",
+    "generate": "allure generate allure-results --clean && allure open"
   },
   "author": "bagusprakasa",
   "license": "ISC",
@@ -13,6 +13,7 @@
     "@babel/core": "^7.23.3",
     "@babel/preset-env": "^7.23.3",
     "@babel/register": "^7.22.15",
+    "@wdio/allure-reporter": "^8.24.2",
     "@wdio/cli": "^8.23.0",
     "@wdio/local-runner": "^8.23.0",
     "@wdio/mocha-framework": "^8.23.0",
